apollo-router/src/router/event/snapshots/apollo_router__router__event__schema__tests__schema_by_url_fallback@logs.snap
---
source: apollo-router/src/router/event/schema.rs
expression: yaml
snapshot_kind: text
---
- fields:
    http.response.status_code: 400
    url.full: "[url.full]"
  level: WARN
  message: failed to fetch supergraph schema
